# Machine_Learning_1_EAN

./: machine_learning_uno.yml  pyproject.toml
Codigo/Semana_1/: Numpy_Pandas_CLASE PRACTICA.ipynb  Primera_regresión_lineal_pesos_y_alturas_.ipynb  Regresion_Lineal_Abogados.ipynb  Regresión logística, métricas ,  Gradiente y MC.ipynb  diabetesLineal_y_logistica_Mzz.ipynb
Codigo/Semana_2/: 6_Diagnosis_Bias_and_variance_clase.ipynb  BayesyKvecinosaplicacionmedica.ipynb  Distancias_clase_.ipynb  diabetesLineal_y_logistica_Comente_explore_y_analice_ (1).ipynb
Codigo/Semana_3/: KNNipynb (1).ipynb  Tree_Ensemble (2).ipynb
Codigo/Semana_3/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Codigo/Semana_3/catboost_info/learn/: events.out.tfevents
Codigo/Semana_4/: Feature_selection (1).ipynb  Support_vector_Machines (1).ipynb  graficarMatriz.ipynb  graficarVectores.ipynb
Codigo/Talleres/: Estudiantes_.ipynb  Regresion_Logistica_Tarea.ipynb  Telecom.ipynb
