[tool.poetry]
name = "machine-learning-"
version = "0.1.0"
description = "curso_machine_learning"
authors = ["Carlos_Mauricio_Arteaga"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
plotly = "^5.24.1"
nbformat = "^5.10.4"
sympy = "^1.13.3"
scipy = "^1.14.1"
mlxtend = "^0.23.1"
yellowbrick = "^1.5"
xgboost = "^2.1.2"
imbalanced-learn = "^0.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
